Add support for Swagger from JSDoc
Added NPM genapi command
